--- a/quest/templates/quest.html
+++ b/quest/templates/quest.html
@@ -10,8 +10,8 @@ atributos que aparecerem.</h4>
 
 <hr />
 
-<a href="http://localhost:8000/quest/nutri" class="btn btn-primary">Atributos - Nutrição Animal</a>
-<a href="http://localhost:8000/quest/pg" class="btn btn-primary">Atributos - Consultoria em Gestão</a>
-<a href="http://localhost:8000/quest/tech" class="btn btn-primary">Atributos - Software para Agronegócios</a>
+<a href="{{BASE_URL}}quest/nutri" class="btn btn-primary">Atributos - Nutrição Animal</a>
+<a href="{{BASE_URL}}quest/pg" class="btn btn-primary">Atributos - Consultoria em Gestão</a>
+<a href="{{BASE_URL}}quest/tech" class="btn btn-primary">Atributos - Software para Agronegócios</a>
 
 {% endblock %}
