--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -20,11 +20,11 @@
 
         <table class="table table-bordered">
             <tr>
-                <th>Atributos</th>
-                <th>Empresa: PRODAP</th>
-                <th>Empresa:<input class="input-xlarge" type="text" id="input02" name="p0e2" /></th>
-                <th>Empresa:<input class="input-xlarge" type="text" id="input03" name="p0e3" /></th>
-                <th>Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
+                <th width="36%">Atributos</th>
+                <th width="16%">Empresa: PRODAP</th>
+                <th width="16%">Empresa:<input class="input-xlarge" type="text" id="input02" name="p0e2" /></th>
+                <th width="16%">Empresa:<input class="input-xlarge" type="text" id="input03" name="p0e3" /></th>
+                <th width="16%">Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
             </tr>
 
             <tr>
