--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -18,7 +18,7 @@
                 </label>
 	</div>
 
-        <table class="table table-bordered">
+        <table width="100%" class="table table-bordered">
             <tr>
                 <th width="36%">Atributos</th>
                 <th width="16%">Empresa: PRODAP</th>
