--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -18,8 +18,8 @@
                 </label>
 	</div>
 
-        <table width="100%" class="table table-bordered">
-            <tr>
+        <table class="table table-bordered">
+            <tr width="100%">
                 <th width="36%">Atributos</th>
                 <th width="16%">Empresa: PRODAP</th>
                 <th width="16%">Empresa:<input class="input-xlarge" type="text" id="input02" name="p0e2" /></th>
