--- a/quest/templates/quest-tech.html
+++ b/quest/templates/quest-tech.html
@@ -12,19 +12,19 @@
         <div class="control-group">
 	        <label class="control-label" for="input01"><h4>Nome completo:</h4></label>
 		        <div class="controls">
-				<input id="input01" name="p0e1" class="input-xlarge" type="text">
+				<input id="usuario" name="usuario" class="input-xlarge" type="text">
 				<p class="help-block">Digite seu nome idêntico ao nome digitado no questionário.</p>
 		        </div>
                 </label>
 	</div>
 
         <table class="table table-bordered">
-            <tr>
-                <th>Atributos</th>
-                <th>Empresa: PRODAP</th>
-                <th>Empresa:<input class="input-xlarge" type="text" id="input02" name="p0e2" /></th>
-                <th>Empresa:<input class="input-xlarge" type="text" id="input03" name="p0e3" /></th>
-                <th>Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
+            <tr width="100%">
+                <th width="36%">Atributos</th>
+                <th width="16%">Empresa: PRODAP</th>
+                <th width="16%">Empresa:<input class="input-xlarge" type="text" id="input02" name="p0e2" /></th>
+                <th width="16%">Empresa:<input class="input-xlarge" type="text" id="input03" name="p0e3" /></th>
+                <th width="16%">Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
             </tr>
 
             <tr>
