--- a/quest/templates/quest-pg.html
+++ b/quest/templates/quest-pg.html
@@ -12,7 +12,7 @@
         <div class="control-group">
 		<label class="control-label" for="input01"><h4>Nome completo:</h4></label>
 			<div class="controls">
-				<input id="input01" name="p0e1" class="input-xlarge" type="text">
+				<input id="usuario" name="usuario" class="input-xlarge" type="text">
 				<p class="help-block">Digite seu nome idêntico ao nome digitado no questionário.</p>
 			</div>
                 </label>
