--- a/quest/templates/resp.html
+++ b/quest/templates/resp.html
@@ -5,6 +5,11 @@
 {% if success %}
 <div class="alert alert-success">O Grupo Prodap agradece pela sua participação.</div>
 <hr />
+<h3>Por favor, caso ainda não tenha pontuado algum atributo de alguma das outras empresas e se sinta apto à fazê-lo, clique em um dos botões abaixo.</h3>
+<hr />
+<a href="{{BASE_URL}}quest/nutri" class="btn btn-primary">Atributos - Nutrição Animal</a>
+<a href="{{BASE_URL}}quest/pg" class="btn btn-primary">Atributos - Consultoria em Gestão</a>
+<a href="{{BASE_URL}}quest/tech" class="btn btn-primary">Atributos - Software para Agronegócios</a>
 {% endif %}
 
 {% endblock %}
