--- a/quest/templates/quest-tech.html
+++ b/quest/templates/quest-tech.html
@@ -272,55 +272,55 @@
             </tr>
 
             <tr>
-                <td>Rotinas Produtivas (qualidade e quantidade das rotinas produtivas (zootécnicas) do sistema da Prodap)</td>
+                <td>Layout/Visual</td>
                 <td>
-                	<select name="p6e1">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
-                	</select>
+                        <select name="p6e1">
+                                <option value=->-</option>
+                                <option value=0>0</option>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                        </select>
                 </td>
                 <td>
-                	<select name="p6e2">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
-                	</select>
+                        <select name="p6e2">
+                                <option value=->-</option>
+                                <option value=0>0</option>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                        </select>
                 </td>
                 <td>
-                	<select name="p6e3">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
-                	</select>
+                        <select name="p6e3">
+                                <option value=->-</option>
+                                <option value=0>0</option>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                        </select>
                 </td>
                 <td>
-                	<select name="p6e4">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
-                	</select>
+                        <select name="p6e4">
+                                <option value=->-</option>
+                                <option value=0>0</option>
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                        </select>
                 </td>
             </tr>
 
             <tr>
-                <td>Rotinas Administrativas/Gerenciais (Avalia a qualidade e quantidade das rotinas administrativas do sistema da Prodap)</td>
+                <td>Rotinas Produtivas (qualidade e quantidade das rotinas produtivas (zootécnicas) do sistema da Prodap)</td>
                 <td>
                 	<select name="p7e1">
                 		<option value=->-</option>
@@ -368,7 +368,7 @@
             </tr>
 
             <tr>
-                <td>Tecnologia e inovação (capacidade do sistema em oferecer soluções tecnológicas e inovadoras no mercado)</td>
+                <td>Rotinas Administrativas/Gerenciais (Avalia a qualidade e quantidade das rotinas administrativas do sistema da Prodap)</td>
                 <td>
                 	<select name="p8e1">
                 		<option value=->-</option>
@@ -416,7 +416,7 @@
             </tr>
 
             <tr>
-                <td>Software via WEB (capacidade do sistema em oferecer soluções online)</td>
+                <td>Tecnologia e inovação (capacidade do sistema em oferecer soluções tecnológicas e inovadoras no mercado)</td>
                 <td>
                 	<select name="p9e1">
                 		<option value=->-</option>
@@ -464,7 +464,7 @@
             </tr>
 
             <tr>
-                <td>Customização (capacidade da empresa em atender as necessidades específicas solicitadas pelo cliente)</td>
+                <td>Software via WEB (capacidade do sistema em oferecer soluções online)</td>
                 <td>
                 	<select name="p10e1">
                 		<option value=->-</option>
@@ -512,7 +512,7 @@
             </tr>
 
             <tr>
-                <td>Software com comunicação com periféricos (quantidade de meios existentes que o software disponibiliza para comunicar com balanças, leitores, ordenhadeiras, entre outros)</td>
+                <td>Customização (capacidade da empresa em atender as necessidades específicas solicitadas pelo cliente)</td>
                 <td>
                 	<select name="p11e1">
                 		<option value=->-</option>
@@ -560,7 +560,7 @@
             </tr>
 
             <tr>
-                <td>Agilidade nos serviço prestados (agilidade da entrega dos serviços prestados pela Tech no prazo estipulado)</td>
+                <td>Software com comunicação com periféricos (quantidade de meios existentes que o software disponibiliza para comunicar com balanças, leitores, ordenhadeiras, entre outros)</td>
                 <td>
                 	<select name="p12e1">
                 		<option value=->-</option>
@@ -605,21 +605,10 @@
                 		<option value=5>5</option>
                 	</select>
                 </td>
-                <td>
-                	<select name="p12e5">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
-                	</select>
-                </td>
             </tr>
 
             <tr>
-                <td>Oferta  de qualidade (grau de conformidade dos produtos e serviços prestados com as exigências dos clientes  (desempenho, confiabilidade, segurança)</td>
+                <td>Agilidade nos serviço prestados (agilidade da entrega dos serviços prestados pela Tech no prazo estipulado)</td>
                 <td>
                 	<select name="p13e1">
                 		<option value=->-</option>
@@ -664,10 +653,21 @@
                 		<option value=5>5</option>
                 	</select>
                 </td>
+                <td>
+                	<select name="p14e5">
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
+                	</select>
+                </td>
             </tr>
 
             <tr>
-                <td>Conhecimento e força da marca (grau de conhecimento e força em que o mercado enxerga a marca Prodap)</td>
+                <td>Oferta  de qualidade (grau de conformidade dos produtos e serviços prestados com as exigências dos clientes  (desempenho, confiabilidade, segurança)</td>
                 <td>
                 	<select name="p14e1">
                 		<option value=->-</option>
@@ -715,7 +715,7 @@
             </tr>
 
             <tr>
-                <td>Integração com outros sistemas (capacidade do sistema em integrar o software com sistemas ERP'S)</td>
+                <td>Conhecimento e força da marca (grau de conhecimento e força em que o mercado enxerga a marca Prodap)</td>
                 <td>
                 	<select name="p15e1">
                 		<option value=->-</option>
@@ -751,6 +751,54 @@
                 </td>
                 <td>
                 	<select name="p15e4">
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
+                	</select>
+                </td>
+            </tr>
+
+            <tr>
+                <td>Integração com outros sistemas (capacidade do sistema em integrar o software com sistemas ERP'S)</td>
+                <td>
+                	<select name="p16e1">
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
+                	</select>
+                </td>
+                <td>
+                	<select name="p16e2">
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
+                	</select>
+                </td>
+                <td>
+                	<select name="p16e3">
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
+                	</select>
+                </td>
+                <td>
+                	<select name="p16e4">
                 		<option value=->-</option>
                 		<option value=0>0</option>
                 		<option value=1>1</option>
