att final - <h4>Clique no botão abaixo para Iniciar!</h4>

--- a/quest/templates/quest.html
+++ b/quest/templates/quest.html
@@ -11,8 +11,7 @@
 </div>
 <hr />
 
-<h4>As próximas perguntas são rápidas e objetivas, basta pontuar, seguindo as instruções, cada um dos 
-atributos que aparecerem.</h4>
+<h4>Clique no botão abaixo para Iniciar!</h4>
 
 <hr />
 
