--- a/quest/templates/quest-pg.html
+++ b/quest/templates/quest-pg.html
@@ -12,7 +12,7 @@
 <div class="container">
     <body>
         <form class="form-horizontal" method="post" action="/resp/">
-        
+        <input type="hidden" name="negocio" value="pg" />
         <div class="control-group">
 		<label class="control-label" for="input01"><h4>Nome completo:</h4></label>
 			<div class="controls">
