--- a/quest/templates/quest-tech.html
+++ b/quest/templates/quest-tech.html
@@ -11,7 +11,7 @@
 <div class="container">
     <body>
         <form class="form-horizontal" method="post" action="/resp/">
-        
+        <input type="hidden" name="negocio" value="tech" />
         <div class="control-group">
 	        <label class="control-label" for="input01"><h4>Nome completo:</h4></label>
 		        <div class="controls">
