--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -13,9 +13,9 @@
         <form class="form-horizontal" method="post" action="/resp/">
         <input type="hidden" name="negocio" value="nutri" />
         <div class="control-group">
-		<label class="control-label" for="input01"><h4>Nome completo:</h4></label>
+		<label class="control-label" for="usuario"><h4>Nome completo:</h4></label>
 			<div class="controls">
-				<input id="usuario" name="usuario" class="input-xlarge" type="text">
+				<input id="usuario" name="usuario" type="text">
 				<p class="help-block">Digite seu nome idêntico ao nome digitado no questionário.</p>
 			</div>
                 </label>
