--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -15,7 +15,7 @@
         <div class="control-group">
 		<label class="control-label" for="usuario"><h4>Nome completo:</h4></label>
 			<div class="controls">
-				<input id="usuario" name="usuario" type="text">
+				<input id="usuario" style="padding:5px;height:25px;width:300px;" name="usuario" type="text">
 				<p class="help-block">Digite seu nome idêntico ao nome digitado no questionário.</p>
 			</div>
                 </label>
