--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -25,8 +25,8 @@
             <tr width="100%">
                 <th width="36%">Atributos</th>
                 <th width="16%">Empresa: PRODAP<input style="display:none" type="text" name="p0e1" value="PRODAP" /></th>
-                <th width="16%">Empresa:<input type="text" id="input02" name="p0e2" /></th>
-                <th width="16%">Empresa:<input type="text" id="input03" name="p0e3" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input02" name="p0e2" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input03" name="p0e3" /></th>
                 <th width="16%">Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
             </tr>
 
