--- a/quest/templates/quest-pg.html
+++ b/quest/templates/quest-pg.html
@@ -13,10 +13,11 @@
     <body>
         <form class="form-horizontal" method="post" action="/resp/">
         <input type="hidden" name="negocio" value="pg" />
+        <input type="hidden" name="negocio" value="nutri" />
         <div class="control-group">
-		<label class="control-label" for="input01"><h4>Nome completo:</h4></label>
+		<label class="control-label" for="usuario"><h4>Nome completo:</h4></label>
 			<div class="controls">
-				<input id="usuario" name="usuario" class="input-xlarge" type="text">
+				<input id="usuario" style="padding:5px;height:25px;width:300px;" name="usuario" type="text">
 				<p class="help-block">Digite seu nome idêntico ao nome digitado no questionário.</p>
 			</div>
                 </label>
@@ -26,8 +27,8 @@
             <tr width="100%">
                 <th width="36%">Atributos</th>
                 <th width="16%">Empresa: PRODAP<input style="display:none" type="text" name="p0e1" value="PRODAP" /></th>
-                <th width="16%">Empresa:<input type="text" id="input02" name="p0e2" /></th>
-                <th width="16%">Empresa:<input type="text" id="input03" name="p0e3" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input02" name="p0e2" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input03" name="p0e3" /></th>
                 <th width="16%">Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
             </tr>
 
