--- a/quest/templates/quest.html
+++ b/quest/templates/quest.html
@@ -3,9 +3,10 @@
 {% block container %}
 
 <div class="page-header"><h1>Questionário</h1></div>
-
+<hr />
+<h3>Responda inicialmente o questionário abaixo e em seguida clique no botão Iniciar!</h3>
 <div id="surveyMonkeyInfo">
-  <div>
+	<div>
 		<script src="https://www.surveymonkey.com/jsEmbed.aspx?sm=BI9XcToIYei4Sbl7BrGy6g_3d_3d"> </script>
 	</div>
 </div>
