--- a/quest/templates/resp.html
+++ b/quest/templates/resp.html
@@ -3,7 +3,7 @@
 {% block container %}
 
 {% if success %}
-<div class="alert alert-success">O Grupo Prodap agradece pela sua participação.</div>
+<div class="alert alert-success">O Grupo Prodap agradece pela sua participação. Em breve enviaremos um curto questionário para produzirmos um software ideal para você!</div>
 <hr />
 <h3>Por favor, caso ainda não tenha pontuado algum atributo de alguma das outras empresas e se sinta apto à fazê-lo, clique em um dos botões abaixo.</h3>
 <hr />
