--- a/quest/templates/quest-pg.html
+++ b/quest/templates/quest-pg.html
@@ -27,8 +27,8 @@
             <tr width="100%">
                 <th width="36%">Atributos</th>
                 <th width="16%">Empresa: PRODAP<input style="display:none" type="text" name="p0e1" value="PRODAP" /></th>
-                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input02" name="p0e2" /></th>
-                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:300px;" id="input03" name="p0e3" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:100px;" id="input02" name="p0e2" /></th>
+                <th width="16%">Empresa:<input type="text" style="padding:5px;height:25px;width:100px;" id="input03" name="p0e3" /></th>
                 <th width="16%">Ideal<input style="display:none" type="text" name="p0e4" value="Ideal" /></th>
             </tr>
 
@@ -804,7 +804,7 @@
         </table>
         <form>
         	{% csrf_token %}
-            <button class="btn btn-primary" type="submit" value="enviar">Salvar</button>
+            <button class="btn btn-primary btn-large" type="submit" value="enviar">Salvar</button>
         </form>
     </body>
 </div>
