{{BASE_URL}}quest/nutri

--- a/quest/templates/base.html
+++ b/quest/templates/base.html
@@ -28,7 +28,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</a>
-					<a class="brand" href="#">
+					<a class="brand" href="{{BASE_URL}}quest/quest">
 						<img src="{{ STATIC_URL }}img/ProdapLogo.png" width="20px"/>&nbsp;&nbsp;Planejamento Estratégico 2013-2017
 					</a>
 				</div>
