--- a/quest/templates/quest.html
+++ b/quest/templates/quest.html
@@ -3,7 +3,7 @@
 {% block container %}
 
 <div class="page-header"><h1>Questionário</h1></div>
-<h3>Responda inicialmente o questionário abaixo e em seguida clique no botão Iniciar!</h3>
+<h3>Responda inicialmente o questionário e em seguida clique no botão Iniciar que se encontra no final da página.</h3>
 <hr />
 <div id="surveyMonkeyInfo">
 	<div>
