--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,14 +33,14 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<select name="p1e1">
-                		<option value=->-</option>
-                		<option value=0>0</option>
-                		<option value=1>1</option>
-                		<option value=2>2</option>
-                		<option value=3>3</option>
-                		<option value=4>4</option>
-                		<option value=5>5</option>
+                	<label class="radio" name="p1e1">
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->0
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->1
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->2
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->3
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->4
+                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->5
                 	</select>
                 </td>
                 <td>
