--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,14 +33,28 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<label class="radio" name="p1e1">
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->0
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->1
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->2
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->3
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->4
-                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->5
+                	<select name="p1e1">
+                		<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->0
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->1
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->2
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->3
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->4
+	                	</label>
+	                	<label class="radio">
+	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->5
+	                	</label>
                 	</select>
                 </td>
                 <td>
