--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,7 +33,7 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<select name="p1e1">
+                	<name="p1e1">
                 		<label class="radio">
 	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
 	                	</label>
