--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,7 +33,7 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<name="p1e1">
+                	<div name="p1e1">
                 		<label class="radio">
 	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
 	                	</label>
@@ -55,7 +55,7 @@
 	                	<label class="radio">
 	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->5
 	                	</label>
-                	</select>
+                	</div>
                 </td>
                 <td>
                 	<select name="p1e2">
