--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,29 +33,15 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<div name="p1e1">
-                		<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->-
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->0
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->1
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->2
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->3
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->4
-	                	</label>
-	                	<label class="radio">
-	                		<input type="radio" name="optionsRadios" id="optionsRadios1" value="-" checked value=->5
-	                	</label>
-                	</div>
+                	<form name="p1e1">
+                		<input type="radio" value=->-</option>
+                		<input type="radio" value=0>0</option>
+                		<input type="radio" value=1>1</option>
+                		<input type="radio" value=2>2</option>
+                		<input type="radio" value=3>3</option>
+                		<input type="radio" value=4>4</option>
+                		<input type="radio" value=5>5</option>
+                	</form>
                 </td>
                 <td>
                 	<select name="p1e2">
