--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -34,13 +34,13 @@
                 <td>Preço (alto ou baixo)</td>
                 <td>
                 	<form name="p1e1">
-                		<input type="radio" value=->-</option>
-                		<input type="radio" value=0>0</option>
-                		<input type="radio" value=1>1</option>
-                		<input type="radio" value=2>2</option>
-                		<input type="radio" value=3>3</option>
-                		<input type="radio" value=4>4</option>
-                		<input type="radio" value=5>5</option>
+                		<option value=->-</option>
+                		<option value=0>0</option>
+                		<option value=1>1</option>
+                		<option value=2>2</option>
+                		<option value=3>3</option>
+                		<option value=4>4</option>
+                		<option value=5>5</option>
                 	</form>
                 </td>
                 <td>
