--- a/quest/templates/quest-nutri.html
+++ b/quest/templates/quest-nutri.html
@@ -33,7 +33,7 @@
             <tr>
                 <td>Preço (alto ou baixo)</td>
                 <td>
-                	<form name="p1e1">
+                	<select name="p1e1">
                 		<option value=->-</option>
                 		<option value=0>0</option>
                 		<option value=1>1</option>
@@ -41,7 +41,7 @@
                 		<option value=3>3</option>
                 		<option value=4>4</option>
                 		<option value=5>5</option>
-                	</form>
+                	</select>
                 </td>
                 <td>
                 	<select name="p1e2">
